# sage-wallet

./: .gitignore  index.html  package-lock.json  package.json
src/: App.tsx  bindings.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-06d0977e741b796f3cd05cb4bcd964abd4cb9e124e6657e8788a6cada529a3c6.json  query-1dfb30392af8c2d51a7c23b5e28d38ad3511d4f79155890f9e96cc37a7a7a519.json  query-b5694b401fa6d6d567801bb837b94860f34676a1e92a64c8b58c7394c779199f.json  query-b8f8ab276033af88e9c1b25d6a9f60d6e1542be94baea3a548ca861124df9a29.json  query-bb5f718fa40907ce7e253feae53330b358e81d04b04fced18c899f86f2a4e11f.json  query-c88e3fe62ecabc2865c903fdf9af6d375cb9cc5115cdd20c93efec7e81ca8b30.json  query-f9037f173a272d6fcf5cb0afe0e9a059baf49610d2682f62b19ef3294c442b2f.json
src-tauri/migrations/: 20240219161110_init.sql
src-tauri/src/: app_data.rs  keychain.rs  main.rs  mnemonic.rs  network.rs  wallet.rs  wallet_cmds.rs
src/components/: Nav.tsx
src/pages/: CreateWallet.tsx  ImportWallet.tsx  Login.tsx  Settings.tsx  Start.tsx  Wallet.tsx  Welcome.tsx
